--- a/reddit_graph/package.json
+++ b/reddit_graph/package.json
@@ -1,24 +1,25 @@
 {
-    "name": "reddit_graph",
-    "version": "1.0.0",
-    "description": "",
-    "private": "true",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "webpack"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "webpack": "^5.74.0",
-        "webpack-cli": "^4.10.0",
-        "webpack-dev-server": "^4.9.3"
-    },
-    "dependencies": {
-        "graphology": "^0.24.1",
-        "graphology-layout-force": "^0.2.4",
-        "graphology-layout-forceatlas2": "^0.9.2",
-        "sigma": "^2.3.1"
-    }
+  "name": "reddit_graph",
+  "version": "1.0.0",
+  "description": "",
+  "private": "true",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3"
+  },
+  "dependencies": {
+    "chroma-js": "^2.4.2",
+    "graphology": "^0.24.1",
+    "graphology-communities-louvain": "^2.0.1",
+    "graphology-layout-noverlap": "^0.4.2",
+    "sigma": "^2.3.1"
+  }
 }
